<resources>
    <string name="app_name">Ingrevia</string>
    <string name="title_home">Home</string>
    <string name="title_recipes">Recipes</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_profile">Profile</string>
    <string name="welcome_bac"> Welcome Back!</string>
    <string name="welcome_text"> Welcome back! Log in to continue finding recipes that match your available ingredients.</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="invalid_email_format">Invalid email format</string>
    <string name="password_must">Password must be at least 8 characters</string>
    <string name="email_minimum_length">Email must be at least 10 characters</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="logo">Logo</string>
    <string name="continue_with_google">Continue With Google</string>
    <string name="or">Or</string>
    <string name="back_arrow">Back Arrow</string>
    <string name="don_t_have_account">Don’t have account?</string>
    <string name="register">Register</string>
    <string name="create_account">Create Account</string>
    <string name="sign_text">Sign up to find recipes based on your ingredients and save your favorites for easy access.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="allergy_optional">Allergy (Optional)</string>
    <string name="get_started">Get Started</string>
    <string name="set_up_your_profile">Set Up Your Profile!</string>
    <string name="input_your_allergy_optional">Input your Allergy (Optional)</string>
    <string name="select_your_activity_frequency">Select your activity frequency</string>
    <string name="basic_for_activities_with_minimal_steps">Basic, for activities with minimal steps.</string>
    <string name="simple_for_activities_with_easy_steps_but_slightly_more_than_basic">Simple, for activities with easy steps but slightly more than basic.</string>
    <string name="standard_for_activities_with_a_moderate_number_of_steps">Standard, for activities with a moderate number of steps.</string>
    <string name="advanced_for_activities_that_require_more_steps_and_are_more_complex">Advanced, for activities that require more steps and are more complex.</string>
    <string name="comprehensive_for_activities_with_the_most_detailed_and_numerous_steps">Comprehensive, for activities with the most detailed and numerous steps.</string>
    <string name="profile_text">Share your details for meal recommendations tailored to your health goals!</string>
    <string name="weight_must_be_valid">Weight must be a number between 20 and 200</string>
    <string name="height_must_be_valid">Height must be a valid number between 100 and 250</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="intro1">Discover daily healthy meal inspirations that are easy to follow, helping you maintain a balanced lifestyle for long term well being.</string>
    <string name="title_intro1">Embrace a Healthy Lifestyle with Nutritious Daily Meals</string>
    <string name="title_intro2">Save Money by Cooking with Ingredients You Already Have</string>
    <string name="intro2">Make the most of what’s in your pantry to create delicious, budget friendly, and nutritious meals without the need to shop for extra ingredients.</string>
    <string name="title_intro3">Enjoy a Variety of Recipes and Convenient Shopping</string>
    <string name="intro3">Explore new recipe inspirations for every taste and shop your favorite ingredients with ease, making your cooking experience more enjoyable.</string>
    <string name="recipes_name">Recipes Name</string>
    <string name="calories">Calories</string>
    <string name="steps">Steps</string>
    <string name="please_complete_data">Please complete your data</string>
    <string name="failed_save_data">Failed to save data: %1$s</string>
    <string name="please_complete_login">Please complete login data</string>
    <string name="please_complete_register">Please complete registration data</string>
    <string name="login_failed">Login failed: %1$s</string>
    <string name="register_failed">Registration failed: %1$s</string>
    <string name="password_not_match">Password does not match</string>
    <string name="hint_email">Enter your email</string>
    <string name="hint_password">Enter your password</string>
    <string name="hint_confirm_password">Confirm your password</string>
    <string name="google_sign_in_failed">Google Sign In failed: %1$s</string>
    <string name="loading">Loading...</string>
    <string name="logging_in">Logging in...</string>
    <string name="registering">Registering...</string>
    <string name="saving_data">Saving data...</string>
    <string name="hint_height">Enter your height (cm)</string>
    <string name="hint_weight">Enter your weight (kg)</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="protein_30g">Protein: 30g</string>
    <string name="favorite">Favorite</string>
    <string name="recipes_detail">Recipes Detail</string>
    <string name="recipes_title">Recipes Title</string>
    <string name="number_steps">number_steps</string>
    <string name="calories_value">calories_value</string>
    <string name="total_steps">Total Steps</string>
    <string name="total_calories">Total Calories</string>
    <string name="title_activity_nutrition">NutritionActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_nutritions">NutritionsActivity</string>
    <string name="nutritions_fact">Nutritions Fact</string>
    <string name="let_s_find_healthy_recipes">Let\'s find healthy recipes!</string>
    <string name="welcome_back_ingrevian">Welcome back Ingrevian</string>
    <string name="search_result">Search Result</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="hint_age">Enter your age</string>
    <string name="age">Age</string>
    <string name="age_must_be_valid">Age must be valid</string>
    <string name="explore_your_ideal_calorie_meals">Explore Your Ideal Calorie Meals!</string>
    <string name="high_protein_foods_for_energy">High-Protein Foods for Energy</string>
    <string name="see_more"><![CDATA[See More >]]></string>
    <string name="discover_popular_recipes_today">Discover popular recipes today!</string>
    <string name="delicious_recipes_anytime">Delicious recipes anytime</string>
    <string name="categories">Categories</string>
    <string name="choose_ingredients_make_your_meal">Choose Ingredients, Make Your Meal!</string>
    <string name="select_cook_and_enjoy">Select, Cook, and Enjoy</string>
    <string name="search">Search</string>
    <string name="recipes_result">Recipes Result</string>
    <string name="name_cannot_be_empty">Name Cannot Be Empty</string>
    <string name="name">Name</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="about_developer">About Developer</string>
    <string name="log_out">Log Out</string>
    <string name="activity_category">Activity Category</string>
    <string name="profile">Profile</string>
    <string name="popular">Popular</string>
    <string name="enter_your_email_below_and_we_ll_help_you_reset_it_to_get_back_to_finding_recipes">Enter your email below, and we’ll help you reset it to get back to finding recipes!</string>
    <string name="please_enter_email">Enter your email</string>
    <string name="sending_reset_link">Sending reset link...</string>
    <string name="reset_password_title">Reset Password</string>
    <string name="reset_password_description">Click the button below to continue resetting the password in the browser.</string>
    <string name="reset_password">Reset Password</string>
    <string name="unexpected_error">Unexpected Error Occure</string>
    <string name="team_c242_ps441">Team C242-PS441</string>
    <string name="team_c242_ps441_from_bangkit_2024_is_dedicated_to_creating_ingrevia_a_smart_app_for_discovering_healthy_recipes_tailored_to_your_body_s_needs">Team C242-PS441 from Bangkit 2024 is dedicated to creating Ingrevia, a smart app for discovering healthy recipes tailored to your body’s needs.</string>
    <string name="machine_learning">Machine Learning</string>
    <string name="m315b4ky2836_muhammad_fathan_mukhlisan">M315B4KY2836 Muhammad Fathan Mukhlisan</string>
    <string name="m315b4ky2713_muhammad_alif_alferdiansyah">M315B4KY2713 Muhammad Alif Alferdiansyah</string>
    <string name="mobile_development">Mobile Development</string>
    <string name="a315b4ky2317_m_haikal_ash_shiddiq">A315B4KY2317 M Haikal Ash Shiddiq</string>
    <string name="a315b4kx3255_natalia_oyong">A315B4KX3255 Natalia Oyong</string>
    <string name="cloud_computing">Cloud Computing</string>
    <string name="c315b4ky2565_mohammad_fahrezi">C315B4KY2565 Mohammad Fahrezi</string>
    <string name="c287b4ky1391_faqih_fathurrachman">C287B4KY1391 Faqih Fathurrachman</string>
    <string name="m315b4ky2340_m_farid_saputra">M315B4KY2340 M. Farid Saputra</string>
    <string name="register_success_please_login">Registration successful! Please login with your account.</string>
    <string name="welcome">Welcome!</string>
    <string name="user_info_needed_message">In order to get appropriate menu recommendations, we need some information about you.</string>
    <string name="continue_text">Continue</string>
    <string name="minimum_age_error">Minimum age is 13 years</string>
    <string name="maximum_age_error">Maximum age is 100 years</string>
    <string name="protein_format">Protein: %1$d g</string>
    <string name="fat_format">Fat: %1$d g</string>
    <string name="sodium_format">Sodium: %1$d mg</string>
    <string name="calories_format">Calories: %1$d cal</string>
    <string name="recommended_recipes">Recommended Recipes</string>
    <string name="popular_recipe">Popular Recipe</string>
    <string name="search_ingredients">Search ingredients...</string>
</resources>