<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_password_title"
        android:textAppearance="@style/semibold_18"
        android:textColor="@color/neutral_700"
        android:gravity="center"
        android:layout_marginTop="16dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_password_description"
        android:textAppearance="@style/regular_14"
        android:textColor="@color/neutral_500"
        android:gravity="center"
        android:layout_marginTop="8dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnResetPassword"
        style="@style/MainButton.Default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"/>
</LinearLayout> 