<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.forgotpassword.ForgotPasswordActivity">

    <ImageView
        android:id="@+id/back_arrow"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:contentDescription="@string/back_arrow"
        app:srcCompat="@drawable/back_arrow_primary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginStart="32dp"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_logo"
        android:layout_marginTop="100dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp" />

    <LinearLayout
        android:id="@+id/welcome_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <TextView
            android:id="@+id/forgot_pass"
            android:layout_width="345dp"
            android:layout_height="22dp"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="-5sp"
            android:text="@string/forgot_password"
            android:textAppearance="@style/semibold_18"
            android:textColor="@color/neutral_700"/>

        <TextView
            android:id="@+id/forgot_text"
            android:layout_width="345dp"
            android:layout_height="34dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="-4sp"
            android:text="@string/enter_your_email_below_and_we_ll_help_you_reset_it_to_get_back_to_finding_recipes"
            android:textAppearance="@style/regular_14"
            android:textColor="@color/neutral_500"/>
    </LinearLayout>

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="@id/emailEditTextLayout"
        android:textAppearance="@style/regular_14"
        app:layout_constraintTop_toBottomOf="@id/welcome_container"
        android:textColor="@color/neutral_700"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailEditTextLayout"
        style="@style/TextInputLayout.Default"
        app:endIconMode="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:startIconDrawable="@drawable/ic_email"
        android:layout_marginTop="10dp">

        <com.frxhaikal_plg.ingrevia.ui.customview.CustomEmailEditText
            android:id="@+id/ed_login_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnforgot"
        style="@style/MainButton.Default"
        android:text="Change Password"
        android:layout_marginTop="20dp"
        android:textAppearance="@style/medium_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditTextLayout" />

    <include
        android:id="@+id/loading"
        layout="@layout/layout_loading" />
</androidx.constraintlayout.widget.ConstraintLayout>
